# skill-dbus

./: .gitignore  README.md
client/: main.cpp  meson.build
client/dbus/: client_dbus.cpp
client/dbus/include/: client_dbus.h
server/: main.cpp  meson.build
server/dbus/: server_dbus.cpp
server/dbus/include/: server_dbus.h
server/test/: introspection.xml  test_dbus.cpp
server/test/include/: test_dbus.h
